--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "A notes application because it's 2018 and we're not doing todo lists anymore",
   "main": "src/application.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config ./config/webpack.config.development.js",
-    "build": "rimraf dist && NODE_ENV=production webpack --config ./config/webpack.config.production.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.development.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./config/webpack.config.production.js",
     "test": "jest",
-    "deploy": "yarn run build && aws s3 cp dist/ s3://superimportantwebsite.com --recursive"
+    "deploy": "yarn run build && aws s3 cp dist/ s3://rohan-smart-web.com --recursive"
   },
   "author": "Steve Kinney <hello@stevekinney.net> (http://stevekinney.net)",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "codemirror": "^5.35.0",
+    "cross-env": "^7.0.2",
     "history": "^4.7.2",
     "jest": "^23.5.0",
     "lodash": "^4.17.5",
@@ -70,7 +71,7 @@
     "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.11",
+    "webpack-cli": "latest",
     "webpack-dev-server": "^3.1.1"
   }
 }
