--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: node_js
 node_js:
   - '12.16.1'
 cache:
-  yarn: true
+  npm: true
   directories:
     - node_modules
 script:
-  - yarn test
+  - npm run test
 before_deploy:
-  - yarn global add travis-ci-cloudfront-invalidation
-  - yarn run build
+  - npm run global add travis-ci-cloudfront-invalidation
+  - npm run build
 deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
