--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@ language: node_js
 node_js:
   - '12.16.1'
 cache:
-  npm: true
-  yarn: false
+  yarn: true
   directories:
     - node_modules
+before_script:
+  - yarn --frozen-lockfile
 script:
-  - npm run test
+  - yarn test
 before_deploy:
-  - npm run global add travis-ci-cloudfront-invalidation
-  - npm run build
+  - yarn global add travis-ci-cloudfront-invalidation
+  - yarn run build
 deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
