--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
   - '12.16.1'
+before_install:
+  - yarn --frozen-lockfile
 cache:
   yarn: true
   directories:
     - node_modules
-before_script:
-  - yarn --frozen-lockfile
 script:
   - yarn test
 before_deploy:
